--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,14 @@ services:
       - '5001:80' # Map host port 5000 to container port 80
     volumes:
       - ./server/src:/server/src
+    command: flask run --host=0.0.0.0 --port=80 --reload
 
   client:
-    build: ./client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
     ports:
       - '3000:3000' # Map host port 5000 to container port 80
     volumes:
       - ./client:/client
+    command: yarn dev
