--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,3 +3,6 @@ beautifulsoup4==4.12.2
 scrapfly-sdk==0.8.9
 Flask-SQLAlchemy==3.1.1
 python-dotenv==1.0.0
+httpx == 0.25.0
+pandas == 2.1.1
+lxml == 4.9.3
