--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "primereact": "^10.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
